Adding Unit Tests